--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -15,6 +15,9 @@
 * {{el-l|Ισραηλινή|tr=Israiliní|gloss=Israeli|g=f}}
 * {{el-l|Ισραηλινός|tr=Israilinós|gloss=Israeli|g=m}}
 
+====See also====
+* {{el-l|εβραϊκά|tr=evraïka|gloss=Hebrew language}}
+
 [[Category:el:Countries]]
 
 [[az:Ισραήλ]]
