--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -7,7 +7,7 @@
 From {{etyl|frm}} {{term|advertissement||statement calling attention|lang=frm}}, compare French {{term|avertissement||warning|lang=fr}}. See [[advertise]].
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/}}, {{X-SAMPA|/@d"v3:tIsm@nt/}}
+* {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/}}, {{X-SAMPA|/@d"v3:tIsm@nt/}} (occasionally {{IPA|/ad.və.ˈtʌɪz.mənt/}}/ in some regions)
 * {{audio|Advertisement.ogg|Audio (UK)}}
 * {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/}}, {{X-SAMPA|/{"dv@`%taIzm@nt/}}
 * {{audio|en-us-advertisement.ogg|Audio (US)}}
