--- a/en/b/bent.6793.wikitext
+++ b/en/b/bent.6793.wikitext
@@ -32,7 +32,7 @@ From {{term|bend}}.
 * {{sense|folded}} [[crooked]]
 * {{sense|homosexual}} [[queer]]
 
-=====Dervied terms=====
+=====Derived terms=====
 * [[bent as a nine-bob note]]
 
 =====Related terms=====
