t+fo:[[leður]] t+sk:[[koža]] t+fo:[[leður-]] t+da:[[læder-]] t+sk:[[kožený]] t+cs:[[kožený]] ([[WT:EDIT|Assisted]]) <leather#16983998>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -38,6 +38,7 @@
 * Danish: {{t-|da|læder|n}}
 * Dutch: {{t+|nl|leer|n}}, {{t-|nl|leder|n}} (formal)
 * Esperanto: {{t-|eo|ledo|xs=Esperanto}}
+* Faroese: {{t|fo|leður|n}}
 * Finnish: {{t+|fi|nahka}}
 * French: {{t+|fr|cuir|m}}
 * Georgian: {{t-|ka|ტყავი|tr=tqavi|sc=Geor|xs=Georgian}}
@@ -71,6 +72,7 @@
 * Serbian:
 *: Roman: [[koža#Serbian|koža]] {{f}}
 *: Cyrillic: [[кожа#Serbian|кожа]] {{f}}
+* Slovak: {{t|sk|koža|f}}
 * Slovene: {{t+|sl|usnje|n}}
 * Spanish: {{t+|es|cuero|m}}
 * Swedish: {{t+|sv|läder|n}} (1)
@@ -109,8 +111,11 @@
 ====Translations====
 {{trans-top|made of leather}}
 * Bosnian: {{t-|bs|kožni|m}}
+* Czech: {{t|cs|kožený}}
+* Danish: {{t|da|læder-}}
 * Dutch: {{t+|nl|leren}}
 * Esperanto: {{t|eo|leda}}
+* Faroese: {{t|fo|leður-}}
 * Finnish: [[nahka]]-, [[nahkainen]]
 * Lithuanian: {{t|lt|odinis}}
 * Persian: {{t-|fa|چرمی|tr=charmi|xs=Persian}}
@@ -121,6 +126,7 @@
 * Serbian:
 *: Cyrillic: [[кожни#Serbian|кожни]] {{m}}
 *: Roman: [[kožni#Serbian|kožni]] {{m}}
+* Slovak: {{t|sk|kožený}}
 * Slovene: [[usnjen]]
 * Turkish: {{t+|tr|deri}}
 {{trans-bottom}}
