t+ja:[[リス]] t+vi:[[họ sóc]] t+tt:[[тиен]] t+tk:[[awusiýdik]] t+tk:[[belka]] ([[WT:EDIT|Assisted]]) <squirrel#16987309>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -63,7 +63,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Irish: {{t-|ga|iora|m|xs=Irish}}, {{t|ga|madra crainn|m|xs=Irish}}
 * Isthmus Zapotec: [[chisa]]
 * Italian: {{t-|it|scoiattolo|m}}
-* Japanese: {{t-|ja|栗鼠|tr=りす, risu}}
+* Japanese: {{t-|ja|栗鼠|tr=りす, risu}}, {{t|ja|リス|tr=risu|sc=Jpan}}
 * Karachay-Balkar: {{tø|krc|эрлен|tr=erlen|sc=Cyrl}}, {{qualifier|karachay}} {{tø|krc|агъач къоян|tr=ağaç qoyan|sc=Cyrl}}, {{qualifier|obsolete}} {{tø|krc|тыйын|tr=tıyın|sc=Cyrl}}
 * Kazakh: {{t|kk|тиін|tr=tiïn|sc=Cyrl|xs=Kazakh}}
 * Khakas: {{tø|kjh|тиин|tr=tiin|sc=Cyrl}}
@@ -109,15 +109,17 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Swahili: [[kindi]] ''(nc 9/10)''
 * Swedish: {{t+|sv|ekorre|c}}
 * Taos: [[c’ùwala’ána]]
-* Tatar: {{t-|tt|tien|xs=Tatar}}
+* Tatar: {{t-|tt|tien|xs=Tatar}}, {{t|tt|тиен|tr=tien|sc=Cyrl}}
 * Telugu: [[ఉడుత]] (uDuta)
 * Turkish: {{t+|tr|sincap}}
+* Turkmen: {{t|tk|awusiýdik}}, {{t|tk|belka}}
 * Tuvan: {{tø|tyv|дииң|tr=diiñ|sc=Cyrl}}
 * Ukrainian: {{t+|uk|білка|f|tr=bílka|xs=Ukrainian}}
 * Upper Sorbian: [[wjewjerčka]] {{f}}
 * Uyghur: {{t|ug|تىيىن|tr=tiyin|sc=ug-Arab}}
 * Uzbek: {{t|uz|olmaxon|xs=Uzbek}}
 * Venetian: {{tø|vec|schirat}}
+* Vietnamese: {{t|vi|họ sóc}}
 * Vilamovian: {{tø|wym|achkienła}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|yat}}, {{qualifier|♂}} {{t-|vo|hiyat}}, {{qualifier|♀}} {{t-|vo|jiyat}}, {{qualifier|♂♀ offspring, young}} {{t-|vo|yatül}}, {{qualifier|♂ offspring, young}} {{t-|vo|hiyatül}}, {{qualifier|♀ offspring, young}} {{t-|vo|jiyatül}}
 * Welsh: [[gwiwer]] {{f}}
