--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -31,7 +31,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Basque: [[katagorri]],  {{t-|eu|urtxintxa|xs=Basque}}
 * Belarusian: {{t|be|вавёрка|f|tr=vavjórka|sc=Cyrl}}
 * Breton: {{t|br|gwiñver|m}}, {{t|br|kaz-koad|m}}
-* Bulgarian: {{t+|bg|катерица|f|tr=katerica}}
+* Bulgarian: {{t+|bg|катерица|f|tr=káterica}}
 * Cantabrian: [[esquilu]] {{m}}
 * Catalan: [[esquirol]] {{m}}
 * Cherokee: [[ᏌᎳᎵ]] (salali)
