--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -122,7 +122,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Uyghur: {{t|ug|تىيىن|tr=tiyin|sc=ug-Arab}}
 * Uzbek: {{t|uz|olmaxon|xs=Uzbek}}
 * Venetian: {{tø|vec|schirat}}
-* Vietnamese: {{t|vi|họ sóc}}
+* Vietnamese: {{t|vi|họ sóc}}, {{t|vi|sóc}}
 * Vilamovian: {{tø|wym|achkienła}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|yat}}, {{qualifier|♂}} {{t-|vo|hiyat}}, {{qualifier|♀}} {{t-|vo|jiyat}}, {{qualifier|♂♀ offspring, young}} {{t-|vo|yatül}}, {{qualifier|♂ offspring, young}} {{t-|vo|hiyatül}}, {{qualifier|♀ offspring, young}} {{t-|vo|jiyatül}}
 * Welsh: [[gwiwer]] {{f}}
