Added a section <type system#16996182>

--- a/en/t/type system.775118.wikitext
+++ b/en/t/type system.775118.wikitext
@@ -6,6 +6,9 @@
 
 # {{computing}} A way [[programming language]] classifies [[value]]s and [[expression]]s into [[data type|types]], how it can manipulate those types and how they interact.
 
+====Derived terms====
+* [[nominative type system]]
+
 ====Translations====
 {{trans-top|type system of a programming language}}
 * Croatian: {{t|hr|sustav tipova|m}}, {{t|hr|sustav obilježja|m}}
