--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -17,7 +17,7 @@ French from {{etyl|la}} ''[[#Latin|maximum]]''.
 # {{statistics}} The largest value of a [[batch]] or [[sample]] or the upper bound of a [[probability distribution]].
 # {{colloquial|snooker}} A 147 break; the highest possible break.
 # {{colloquial|darts}} A [[score]] of [[180]] with three darts.
-
+# {{colloquial|cricket}} A scoring shot for 6 runs.
 ====Usage notes====
 * {{term|maxima|Maxima}} is the more common plural, especially for the technical senses.
 
