/* English */ put translations in drop-down menu <bare-butt#17006772>

--- a/en/b/bare-butt.741632.wikitext
+++ b/en/b/bare-butt.741632.wikitext
@@ -18,7 +18,10 @@
 * [[bare-bum]]
 
 ====Translations====
-* Afrikaans: [[kaalgat]]
-* French: [[cul-nu]], [[nu-le-cul]]
+{{trans-top|with the butt exposed}}
+* Afrikaans: {{t+|af|kaalgat}}
+{{trans-mid}}
+* French: {{t+|fr|cul-nu}}, {{t+|fr|nu-le-cul}}
+{{trans-bottom}}
 
 [[Category:English adjectives]]
