+alt form, +cites for second sense, +syn, clean up translations <bare-arse#17007728>

--- a/en/b/bare-arse.741260.wikitext
+++ b/en/b/bare-arse.741260.wikitext
@@ -1,21 +1,33 @@
 ==English==
 {{rfd}}
 
+===Alternative forms===
+*[[barearse]]
+
 ===Etymology===
 [[bare]] naked + [[arse]] anus, bottom.
 
 ===Adjective===
-'''bare-arse'''
+{{en-adj|-}}
 
-# literally, with the [[buttocks]] [[bared]], as for a [[spanking]] or a [[mooning]]
-# by extension, [[stark naked]].
+# {{literal}} With the [[buttocks]] [[exposed]], as for a [[spanking]] or a [[mooning]].
+# {{context|by extension}} [[stark naked|Stark naked]].
+#* '''1969''', [[w:John Gould (columnist)|John Gould]], ''The Jonesport Raffle, and Numerous Other Maine Veracities'', Little, Brown and Company (1969), [http://books.google.com/books?id=O8XYAAAAMAAJ&q=%22bare-arse page 25]:
+#*: So he's pounding them off and is away over the hill in sweet dreams, and Clarice tippy-toes into the bedroom as quiet as fog coming off a millpond, and she takes off her clothes and stands there '''bare-arse''' looking out the window in the moonlight.
+#* '''1990''', Daniel Pollock, ''Lair of the Fox'', HarperCollins (1990), ISBN 9780061000874, [http://books.google.com/books?id=6ad3ZtAOqJUC&q=%22bare-arse page 304]:
+#*: "I sleep '''bare-arse''', Mrs. Bayram, always have, which you can come and check out any time you like."
+#* '''2012''', Sandra Hill, ''Kiss of Pride'', HarperCollins (2012), ISBN 9780062063854, [http://books.google.com/books?id=x-lpPYdTBl8C&pg=PT273 unnumbered page]:
+#*: "You exchanged vows '''bare-arse''' naked in front of an archangel?"
 
 ====Synonyms====
+* [[bareass]]
 * [[bare-bum]]
 * [[bare-butt]]
 
 ====Translations====
-* Afrikaans: [[kaalgat]]
-* French: [[cul-nu]], [[nu-le-cul]]
-
+{{trans-top|with the buttocks exposed}}
+* Afrikaans: {{t+|af|kaalgat}}
+{{trans-mid}}
+* French: {{t+|fr|cul-nu}}, {{t+|fr|nu-le-cul}}
+{{trans-bottom}}
 [[Category:English adjectives]]
