t+tr:[[sonra]] ([[WT:EDIT|Assisted]]) <then#17035789>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -83,7 +83,7 @@ From {{etyl|enm}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=enm
 * Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|då}}
 * Telugu: [[అప్పుడు]] (appuDu)
-* {{trreq|Turkish}}
+* Turkish: {{t|tr|sonra}}
 * Ukrainian: {{t|uk|тоді|tr=todí|sc=Cyrl}}
 * Urdu: {{t|ur|تب|tr=tab|sc=ur-Arab}}
 * Welsh: {{t|cy|bryd hynny|xs=Welsh}}
