--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -204,6 +204,12 @@ From {{etyl|ru|no}} {{term|водка|lang=ru}}.
 
 ==Spanish==
 
+===Etymology===
+From {{etyl|ru|es}} {{term|водка|lang=ru|tr=vódka|lit=little water}}, a diminutive of {{term|вода|lang=ru|tr=vodá||water}}.
+
+===Pronunciation===
+* {{IPA|/ˈboð.ka/|lang=es}}
+
 ===Noun===
 {{es-noun|m}}
 
