--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -125,6 +125,7 @@
 * Khmer: {{t|km|ជ្រូក|tr=jruuk|sc=Khmr}}, {{t|km|សត្វជ្រូក|tr=sat jruuk|sc=Khmr}}
 * Korean: {{t|ko|돼지|tr=dwaeji|sc=Kore}}
 * Kuanua: {{tø|ksd|boroi}}
+* Kumyk: {{tø|kum|донгуз|tr=doñuz|sc=Cyrl}}
 * Kurdish:
 *: Sorani: {{ku-Arab|[[به‌راز]]}} {{g|ku}}
 {{trans-mid}}
