--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -87,7 +87,7 @@
 *: Mandarin: {{t|zh|豬|sc=Hani}}, {{t|zh|猪|tr=zhū|sc=Hani}}
 * Comox: {{tø|coo|kʷašu}}
 * Cornish: {{t-|kw|hogh|m|xs=Cornish}}, {{t-|kw|mogh|p|xs=Cornish}}
-* Czech: {{t+|cs|prase|n}}, {{t|cs|svině|f}}
+* Czech: {{t+|cs|prase|n}}
 * Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
 * Erzya: [[туво]] (tuvo)
@@ -167,7 +167,7 @@
 *: Cyrillic: {{t|sh|свиња|f}}
 *: Roman: {{t|sh|svinja|f}}
 * Sinhalese: {{t|si|ඌරා|tr=ūrā|sc=Sinh}}
-* Slovak: {{t|sk|prasa|n}}, {{t|sk|sviňa|f}}
+* Slovak: {{t|sk|prasa|n}}
 * Slovene: {{t|sl|svinja|f}}, {{t|sl|prašič|m}}, {{t|sl|pujs|m}}
 * Spanish: {{t|es|cerdo|m}}, [[chancho]] {{m}} {{qualifier|Argentina|Bolivia|Chile|Costa Rica|Ecuador|Honduras|Nicaragua|Paraguay|Peru|Uruguay}}, [[chon]] {{m}} {{qualifier|Northern Central Spain|specifically Cantabria}}, [[coche]] {{m}} {{qualifier|Guatemala}}, [[cochi]] {{m}} {{qualifier|Northwestern Mexico}}, [[cochín]] {{m}} {{qualifier|Northern Spain|specifically Aragon}}, [[cochino]] {{m}} {{qualifier|Mexico|Southwestern Spain and Canary Islands|standard usage in Venezuela}}, [[cocho]] {{m}} {{qualifier|Northern Spain|specifically Leon}}, [[cuchi]] {{m}} {{qualifier|Northern Central and Northwestern Argentina}}, [[cuto]] {{m}} {{qualifier|Northern Spain - specifically Aragon, La Rioja and Navarra}}, [[gocho]] {{m}} {{qualifier|Northern Spain|specifically Asturias and Leon}}, [[gorrino]] {{qualifier|Southern Central and Eastern Central Spain}}, [[guarro]] {{m}} {{qualifier|Western Spain|specifically Extremadura}}, [[marrano]] {{m}} {{qualifier|Central and Western Venezuela|Colombia}}, [[puerco]] {{m}} {{qualifier|Caribbean Islands|Costa Rica|Mexico|Panama}}, [[tocino]] {{m}} {{qualifier|Northern Spain|specifically Aragon}}, [[tunco]] {{m}} {{qualifier|El Salvador}}
 * Swahili: {{t+|sw|nguruwe|xs=Swahili}}, {{t+|sw|nguruwe|xs=Swahili}}
