--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -17,6 +17,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 *: Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
 * Esperanto: {{t|eo|okcidentfrisa lingvo|xs=Esperanto}}
+* Faroese: {{t|fo|vesturfrísiskt|n}}
 * Finnish: {{t|fi|länsifriisi}}
 * German: {{t+|de|Westfriesisch|n}}
 {{trans-mid}}
