--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -44,7 +44,7 @@
 * Icelandic: {{t|is|blómkál|n}}
 {{trans-mid}}
 * Ido: {{t+|io|florkaulo|xs=Ido}}
-* Indonesian: {{t-|id|blumkol|xs=Indonesian}}
+* Indonesian: {{t-|id|blumkol|xs=Indonesian}}, {{t|id|kubis bunga}}
 * Italian: {{t|it|cavolfiore|m}}
 * Japanese: {{t-|ja|カリフラワー|tr=karifurawā}}
 * Korean: {{t|ko|꽃양배추|tr=kkotyangbaechu|sc=Hang}}
