--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -24,7 +24,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Japanese: {{t+|ja|フリジア語|tr=Furijia-go}}, {{t|ja|フリース語|tr=Furīsu-go}}
 * Limburgish: {{t|li|Wèsfriesj|n|xs=Limburgish}}
-* Polish: {{t|pl|zachodnio-fryzyjski|m}}
+* Polish: {{t|pl|zachodniofryzyjski|m}}
 * Portuguese: {{t+|pt|frísio|m}},  {{t|pt|frisão|m}}
 * Spanish: {{t|es|frisio occidental|m}}
 * West Frisian: {{t+|fy|Frysk|xs=West Frisian}}
@@ -35,7 +35,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * Finnish: [[länsifriisi|länsifriisiläinen]] [[murre]]
 * Italian: dialetto frisone occidentale (ad hoc)
 {{trans-mid}}
-* Polish: {{t|pl|zachodnio-fryzyjski|m}}
+* Polish: {{t|pl|zachodniofryzyjski|m}}
 * West Frisian: {{t|fy|West-Frysk|xs=West Frisian}}
 {{trans-bottom}}
 
