--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -80,6 +80,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * Spanish: {{t-|es|doblar}}, {{t-|es|curvar}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}},  {{t+|sw|kunja|xs=Swahili}}
 * Swedish: {{t|sv|böja}}
+* Turkish: {{t|tr|bükmek}}
 {{trans-bottom}}
 
 {{trans-top|to force or be forced to submit}}
@@ -89,6 +90,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 {{trans-mid}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}},  {{t+|sw|kunja|xs=Swahili}}
 * Swedish: {{t|sv|kuva}}
+* Turkish: {{t|tr|bükmek}}
 {{trans-bottom}}
 
 {{trans-top|to tie a line}}
@@ -121,13 +123,14 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * German: {{t+|de|biegen}},  {{t+|de|biegen}}, {{t|de|durchbiegen}}
 * Hebrew: {{t|he|התכופף|tr=hitkoféf}}
 * Japanese: {{t-|ja|曲がる|tr=magaru}}
-{{trans-mid}}
 * Russian: {{t|ru|гнуться|tr=gnút'sja}},  {{t|ru|изгибаться|tr=izgibát'sja}}
+{{trans-mid}}
 * Scottish Gaelic: {{t-|gd|crom|xs=Scottish Gaelic}},  {{t-|gd|lùb|xs=Scottish Gaelic}}
 * Slovene: [[upogniti]] se
 * Spanish: {{t-|es|doblarse}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}}
 * Swedish: {{t|sv|böja}}, {{t|sv|krokna}}
+* Turkish: {{t|tr|bükmek}}
 {{trans-bottom}}
 
 {{trans-top|to change direction}}
