--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -47,6 +47,7 @@ From {{etyl|enm}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from {{
 * Finnish: {{t+|fi|huolehtia}}, {{t+|fi|pitää}} {{t+|fi|huoli|alt=huolta}},  {{t+|fi|hoitaa}} ([[tehtävä]]/[[asia]]/[[juttu]]/[[homma]])
 * German: {{t+|de|kümmern}}, {{t+|de|beachten}}
 {{trans-mid}}
+* Lojban: {{t|jbo|jundi}}
 * Scottish Gaelic: {{t|gd|sgeadaich}}
 * Spanish: {{t|es|atender}}, {{t|es|ocupar|alt=ocuparse de}}
 * Welsh: [[gweini#Welsh|canolbwyntio ar]] [[ar#Welsh|ar]]
