t+pt:[[ladrão]] t+pt:[[ladra]] ([[WT:EDIT|Assisted]]) <crook#17066955>

--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -45,6 +45,7 @@ From {{etyl|enm}} {{term|croke|lang=enm}}, {{term|crok|lang=enm}}, from {{etyl|a
 * German: {{t+|de|Gauner|m}}, {{t+|de|Ganove|m}}
 * Icelandic: {{t+|is|glæpamaður|m}}, {{t|is|þorpari|m}}
 * Norwegian Bokmål: {{tø|nb|skurk|m}}
+* Portuguese: {{t|pt|ladrão|m}}, {{t|pt|ladra|f}}
 * Russian: {{t|ru|вор|sc=Cyrl}}
 * Slovene: {{t-|sl|lopov|m}}
 {{trans-bottom}}
