t+pt:[[obrigar]] t+pt:[[dobrar-se]] t+pt:[[virar]] ([[WT:EDIT|Assisted]]) <bend#17066967>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -86,6 +86,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 {{trans-top|to force or be forced to submit}}
 * Bulgarian: {{t|bg|подчинявам}}
 * Dutch: {{t|nl|onderwerpen}}
+* Portuguese: {{t|pt|obrigar}}
 * Spanish: {{t|es|doblegar}}
 {{trans-mid}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}},  {{t+|sw|kunja|xs=Swahili}}
@@ -123,6 +124,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * German: {{t+|de|biegen}},  {{t+|de|biegen}}, {{t|de|durchbiegen}}
 * Hebrew: {{t|he|התכופף|tr=hitkoféf}}
 * Japanese: {{t-|ja|曲がる|tr=magaru}}
+* Portuguese: {{t|pt|dobrar-se}}
 * Russian: {{t|ru|гнуться|tr=gnút'sja}},  {{t|ru|изгибаться|tr=izgibát'sja}}
 {{trans-mid}}
 * Scottish Gaelic: {{t-|gd|crom|xs=Scottish Gaelic}},  {{t-|gd|lùb|xs=Scottish Gaelic}}
@@ -140,6 +142,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * Italian: {{t-|it|piegarsi}}, {{t-|it|curvarsi}}
 {{trans-mid}}
 * Mandarin: {{t|cmn|轉彎|sc=Hani}}
+* Portuguese: {{t|pt|virar}}
 * Scottish Gaelic: {{t-|gd|lùb|xs=Scottish Gaelic}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}}
 {{trans-bottom}}
