--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -124,7 +124,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * German: {{t+|de|biegen}},  {{t+|de|biegen}}, {{t|de|durchbiegen}}
 * Hebrew: {{t|he|התכופף|tr=hitkoféf}}
 * Japanese: {{t-|ja|曲がる|tr=magaru}}
-* Portuguese: {{t|pt|dobrar-se}}
+* Portuguese: {{t|pt|dobrar-se}}, {{t|pt|curvar-se}}
 * Russian: {{t|ru|гнуться|tr=gnút'sja}},  {{t|ru|изгибаться|tr=izgibát'sja}}
 {{trans-mid}}
 * Scottish Gaelic: {{t-|gd|crom|xs=Scottish Gaelic}},  {{t-|gd|lùb|xs=Scottish Gaelic}}
@@ -142,7 +142,7 @@ From {{etyl|enm}} {{term|benden}}, from {{etyl|ang}} {{term|bendan||to bind or b
 * Italian: {{t-|it|piegarsi}}, {{t-|it|curvarsi}}
 {{trans-mid}}
 * Mandarin: {{t|cmn|轉彎|sc=Hani}}
-* Portuguese: {{t|pt|virar}}
+* Portuguese: {{t|pt|virar}}, {{t|pt|curvar}}
 * Scottish Gaelic: {{t-|gd|lùb|xs=Scottish Gaelic}}
 * Swahili: {{t+|sw|pinda|xs=Swahili}}
 {{trans-bottom}}
