--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -141,25 +141,14 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 ===Verb===
 {{en-verb|squirrel|ing}}
 
-# ''with "away":'' To [[hoard]] in a hidden place, by analogy to squirrels' habit of hoarding nuts.
-# ''with "around":'' To move or search erratically, especially as if hurried or confused.
-#: ''My mother warned me not to '''squirrel around''' in my dad's workshop''.
+# {{n-g|Found in phrases.}}
+
+====Derived terms====
+* {{onym|en|squirrel around}}
+* {{onym|en|squirrel away}}
 
 ====Usage notes====
 The participles with a double 'l' ('''[[squirrelling]]''' and '''[[squirrelled]]''') are less common, but supported by the OED for UK usage.
-
-====Translations====
-{{trans-top|to squirrel away}}
-* Finnish: {{t-|fi|hamstrata}}
-{{trans-mid}}
-* Polish: {{t-|pl|chomikować}}
-{{trans-bottom}}
-
-{{trans-top|to squirrel around}}
-* Finnish: [[säntäillä]], säntäillä [[ympäri|ympäriinsä]]
-{{trans-mid}}
-* Polish: {{t-|pl|buszować}}
-{{trans-bottom}}
 
 [[Category:en:Mammals]]
 [[Category:en:Rodents]]
