/* Verb */ reword usage note <squirrel#17067252>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -148,7 +148,7 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * {{onym|en|squirrel away}}
 
 ====Usage notes====
-The participles with a double 'l' ('''[[squirrelling]]''' and '''[[squirrelled]]''') are less common, but supported by the OED for UK usage.
+* In addition to the single-L forms {{term||squirreling|lang=en}} and {{term||squirreling|lang=en}} given above, the less-common double-L forms {{term|squirrelling|lang=en}} and {{term|squirrelling|lang=en}} are also attested in UK usage.
 
 [[Category:en:Mammals]]
 [[Category:en:Rodents]]
