--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -16,9 +16,9 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 {{en-noun}}
 
 # Any of the [[rodent]]s of the family [[Sciuridae]] distinguished by their large bushy tail.
-# {{often|disparaging}} {{Scientology}} A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate. [http://cgi.amazing.com/scientology/dict.html] [http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html]
-# {{golf}} The completion of a hole with a score of nine (9).
-#: ''I got a squirrel on the last hole.'' {{rfv-sense}}
+# {{Scientology|often|disparaging}} A [[freezoner]] or other who fails to apply L Ron Hubbard's technology as is considered appropriate.<ref>[http://cgi.amazing.com/scientology/dict.html Scientology Acronym/Terminology FAQ V2.6], amazing.com.</ref><ref>Joel Sappell and Robert W. Welkos, “[http://www.cs.cmu.edu/~dst/Library/Shelf/la90/la90-6e.html The Battle with the ‘Squirrels’: When the Doctrine Leaves the Church]”, ''Los Angeles Times'', 1990 June 29.</ref>
+# {{rfv-sense}} {{golf}} The completion of a hole with a score of nine (9).
+#: ''I got a '''squirrel''' on the last hole.''
 
 ====Related terms====
 * [[heretic]]
@@ -150,6 +150,9 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 
 ====Usage notes====
 * In addition to the single-L forms {{term||squirreling|lang=en}} and {{term||squirreled|lang=en}} given above, the less-common double-L forms {{term|squirrelling|lang=en}} and {{term|squirrelled|lang=en}} are also attested in UK usage.
+
+===References===
+<references/>
 
 [[Category:en:Mammals]]
 [[Category:en:Rodents]]
