/* Old Dutch */ <thing#17071089>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -271,6 +271,19 @@ From {{proto|Germanic|þingan|lang=odt}}.
 ====Descendants====
 * Dutch: {{l|nl|ding}}
 
+----
+
+==Old Saxon==
+
+===Etymology===
+From {{proto|Germanic|þingan|lang=osx}}.
+
+===Noun===
+{{head|osx|noun|g=n}}
+
+# [[#English|thing]], [[object]]
+# [[matter]], [[case]]
+
 [[ang:thing]]
 [[ar:thing]]
 [[az:thing]]
