--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -53,6 +53,7 @@ From {{etyl|ang}} [[gamenian]] 'to play', either via a dialectal survival of {{e
 # To play risky [[game]]s, especially [[casino]] games, for monetary gain.
 # {{transitive}} To [[risk]] (something) for potential gain.
 #: ''He '''gambled''' his reputation on the outcome.''
+# To interact with equipment at a [[casino]]
 
 ====Translations====
 {{trans-top|to take a risk, with the potential of a positive outcome}}
