--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -167,7 +167,7 @@ From {{etyl|la|fr}} ''[[domina]]''
 # {{l|en|lady}}; {{l|en|woman}}
 
 ====Usage notes====
-* Unlike modern French, [[fam#Old French|fam]] usually refers to a {{l|en|wife}}, while dame refers to a {{l|en|woman}}.
+* Unlike in modern French, ''[[fam#Old French|fam]]'' usually refers to a {{l|en|wife}}, while ''dame'' refers to a {{l|en|woman}}.
 
 ====Descendants====
 * French: {{l|fr|dame}}
