/* Etymology */ Removing “of Germanic origing”. Adding {{recons}}. <abandono#17085962>

--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -52,7 +52,7 @@
 ==Portuguese==
 
 ===Etymology===
-From {{etyl|fro|pt}} {{term|abandoner|lang=fro}}, formed from {{term|a|lang=fro}} + {{term|bandon||jurisdiction, control|lang=fro}}, from {{etyl|ML.|pt}} {{term|bannum||proclamation|lang=la}}, of {{etyl|gem|pt}} origin, from {{etyl|frk|pt}} ''*ban'', from {{proto|Germanic|bannanan|to proclaim, command|lang=pt}}
+From {{etyl|fro|pt}} {{term|abandoner|lang=fro}}, formed from {{term|a|lang=fro}} + {{term|bandon||jurisdiction, control|lang=fro}}, from {{etyl|ML.|pt}} {{term|bannum||proclamation|lang=la}}, from {{etyl|frk|pt}} {{recons|ban|lang=frk}}, from {{proto|Germanic|bannanan|to proclaim, command|lang=pt}}
 
 ===Pronunciation===
 * {{IPA|[abɐ̃ˈdonu]|lang=pt}}
