--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -271,6 +271,9 @@ See {{l|da|bide}}.
 
 ==Volapük==
 
+===Pronunciation===
+* {{IPA|[bid]|lang=vo}}, {{X-SAMPA|[bid]}}
+
 ===Noun===
 {{vo-noun}}
 
@@ -282,7 +285,7 @@ See {{l|da|bide}}.
 {{vo-decl-noun}}
 
 ====Synonyms====
-* [[sot#Volapük|sot]]
+* {{l|vo|sot}}
 
 ====Derived terms====
 * [[bidäd]]
