--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -54,7 +54,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Lao: {{t-|lo|ໄມ້ໄຜ່|tr=mai-phai|sc=Laoo|xs=Lao}}
 * Latin: {{t|la|harundo Indica|f|alt=harundō Indica}}
 * Macedonian: {{t-|mk|бамбус|m|tr=bámbus}}
-* Malay: [[pokok]] [[buluh]], {{t|ms|bambu}}
+* Malay: {{t|ms|pokok buluh}}, {{t|ms|pokok bambu}}
 * Navajo: {{tø|nv|lókʼaatsoh}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}
@@ -83,6 +83,7 @@ From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|la
 * Italian: {{t-|it|bambù|m}}
 * Japanese: {{t|ja|竹|tr=[[たけ]], take|sc=Jpan}}, {{t|ja|竹材|tr=たけざい, takezai|sc=Jpan}}
 * Macedonian: {{t-|mk|бамбус|m|tr=bámbus}}
+* Malay: {{t|ms|buluh}}, {{t|ms|bambu}}
 * Portuguese: {{t+|pt|bambu|m}}
 * Russian: {{t+|ru|бамбук|m|tr=bambúk|sc=Cyrl}}, {{t|ru|бамбуковая трость|f|tr=bambúkovaja trostʹ|sc=Cyrl}}
 * Slovene: {{t+|sl|bambus|m}}
