--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -46,6 +46,7 @@
 {{trans-top|grinding apparatus}}
 * Arabic: {{Arab|[[مطحنة]]}} {{IPAchar|(máʈħana)}} {{f}}
 * Armenian: {{t-|hy|աղաց|tr=aġac'}}, {{t-|hy|ջրաղաց|tr=ǰraġac'}}
+* Aromanian: {{t|rup|moarã|f}}
 * Bosnian: {{t-|bs|mlin|m}}
 * Catalan: {{t|ca|molí|m}}
 * Croatian: {{t-|hr|mlin|m}}
@@ -57,6 +58,7 @@
 * Estonian: {{t-|et|veski}}
 * Finnish: {{t+|fi|mylly}}
 * French: {{t+|fr|moulin|m}}
+* Friulian: {{t|fur|mulìn|m}}
 * German: {{t+|de|Mühle|f}}
 * Greek: {{t+|el|μύλος|m|tr=mýlos}}, {{t|el|αλεστική μηχανή|f|tr=alestikí michaní|sc=Grek}}
 * Hebrew: {{t|he|טחנה|tr=tachánah}}
@@ -72,12 +74,15 @@
 * Luxembourgish: {{t|lb|Millen|f}}
 * Macedonian: {{t-|mk|млин|m|tr=mlin}}, {{t|mk|мелница|f|tr=mélnica}}, {{t|mk|мелница|f|tr=mélnica}}
 * Norwegian: {{t+|no|mølle|m}}, {{t|no|mylna|f}}
+* Occitan: {{t|oc|molin|m}}
 * Old High German: [[mulin]] {{f}}
 * Persian: {{t|fa|آسیاب|sc=fa-Arab}}, {{t|fa|آسیا|sc=fa-Arab}}
 * Polish: {{t+|pl|młyn|m}}
 * Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
 * Romanian: {{t-|ro|moară}}
+* Romansch: {{t|rm|mulin|m}}, {{t|rm|mulegn}}
 * Russian: {{t+|ru|мельница|f|tr=mél’nitsa}}
+* Sardinian: {{t|sc|molinu}}, {{t|sc|mulinu}}
 * Scottish Gaelic: {{t-|gd|muileann|m|f|xs=Scottish Gaelic}}
 * Serbian:
 *: Cyrillic: [[млин]] {{m}}
