--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -4,7 +4,8 @@
 {{wikipedia}}
 
 ===Alternative forms===
-* {{l|en|iland}}, {{l|en|ylond}}, {{l|en|ylelond}} {{qualifier|obsolete}}
+* {{l|en|iland}} {{qualifier|dialectal}}
+* {{l|en|ylond}}, {{l|en|ylelond}} {{qualifier|obsolete}}
 
 ===Etymology===
 From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, {{term|yland|lang=enm}}, {{term|ylond|lang=enm}}, from {{etyl|ang}} {{term|igland|īġland|lang=ang}}, {{term|iegland|īeġland|lang=ang}}, {{term|ealand|ēaland|island|lang=ang}}, from {{etyl|ang}} {{term|ieg|īeġ|island|lang=ang}} (from {{proto|Germanic|awiz||awjō|island, water, waterland, meadow|lang=en}}, from {{proto|Indo-European|akw-|water|lang=en}}) + {{term|land||land|lang=ang}}, equivalent to {{compound|ea|land}}. Cognate with {{etyl|sco|-}} {{term|iland|lang=sco}}, {{term|yland||island|lang=sco}}, {{etyl|fy|-}} {{term|eilân||island|lang=fy}}, {{etyl|frs|-}} {{term|eiland||island|lang=frs}}, {{etyl|nl|-}} {{term|eiland||island|lang=nl}}, {{etyl|nds|-}} {{term|eiland||island|lang=nds}}, {{etyl|de|-}} {{term|Eiland||island|lang=de}}, {{etyl|da|-}} {{term|øland||island|lang=da}}, {{etyl|is|-}} {{term|eyland||island|lang=is}}. The erroneous insertion of ''s''&mdash;a late spelling modification (16th c.)&mdash;is due to unrelated term {{term|isle|lang=en}}. Related also to {{etyl|de|-}} {{term|lang=de|Aue||water-meadow}}, {{etyl|la|-}} {{term|lang=la|aqua||water}}. More at {{l|en|ea}}.
