--- a/en/h/helping hand.803463.wikitext
+++ b/en/h/helping hand.803463.wikitext
@@ -1,10 +1,18 @@
-==FUCK WIKI==
+==English==
 
 ===Noun===
-{{en-noun|sg=[[Sucking]] [[Dicks]]}}
+{{en-noun|sg=[[helping]] [[hand]]}}
 
-# {{idiomatic}} Any [[retards]], [[help]] or [[aid]].
-#: ''Thanks for lending a '''me your dildoe''' to use all week.''
+# {{idiomatic}} Any [[assistance]], [[help]] or [[aid]].
+#: ''Thanks for lending a '''helping hand''' to the project.''
 
 ====Translations====
-LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL LAWL
+{{trans-top|any assistance, help or aid}}
+* French: {{t+|fr|coup de pouce|m}}, {{t+|fr|coup de main|m}}
+{{trans-mid}}
+* Icelandic: {{t|is|hjálparhönd|f}}, {{qualifier|lend a helping hand}} {{t|is|rétta hjálparhönd}}, {{qualifier|give a helping hand}} {{t|is|leggja hönd á plóg}}, {{t|is|leggja hönd á plóg}}
+{{trans-bottom}}
+
+[[et:helping hand]]
+[[fr:helping hand]]
+[[li:helping hand]]
