t+roa-jer:[[b'lette]] t-balance ([[WT:EDIT|Assisted]]) <stoat#17114079>

--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -14,8 +14,9 @@
 {{trans-top|an ermine}}
 * German: {{t|de|Hermelin|n}}
 * Hungarian: {{t|hu|hermelin}}
-* Navajo: {{tø|nv|dlǫ́ʼiiłgaii}}
+* Jèrriais: {{tø|roa-jer|b'lette|f}}
 {{trans-mid}}
+* Navajo: {{tø|nv|dlǫ́ʼiiłgaii}}
 * Polish: {{t|pl|gronostaj}}
 * Volapük: {{qualifier|male or female}} {{t|vo|härmin}}
 {{trans-bottom}}
