/* Tok Pisin */ <rot#17114607>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -270,6 +270,8 @@ From {{proto|Germanic|raudaz|lang=goh}} (compare Old English {{term|read|rēad|l
 ----
 
 ==Tok Pisin==
+===Etymology===
+{{etyl|en|tpi}} {{term|road}}
 
 ===Noun===
 {{head|tpi|noun}}
@@ -282,6 +284,8 @@ From {{proto|Germanic|raudaz|lang=goh}} (compare Old English {{term|read|rēad|l
 ====References====
 
 Tok Pisin texts: from the beginning to the present / edited by Peter Mühlhäusler, Thomas E. Dutton, Suzanne Romaine. / John Benjamins Publishing Company / Copyright 2003 / ISBN 90 272 4718 8 / page 106
+
+{{LDL}}
 
 [[ar:rot]]
 [[ast:rot]]
