--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|enm}} {{term|whistlen|lang=enm}}; {{etyl|ang}} {{term|hwistlan|lang=ang}}.
+{{etyl|enm}} {{term|whistlen|lang=enm}}; {{etyl|ang}} {{term|hwistlan|lang=ang}}, from {{proto|Germanic|hwistlōjanan}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/wɪsl̩/}}, {{X-SAMPA|1=/wIsl=/}}
