t+ckb:[[ڕۆژوو]] t+ku:[[rojî]] ([[WT:EDIT|Assisted]]) <sawm#17130712>

--- a/en/s/sawm.746803.wikitext
+++ b/en/s/sawm.746803.wikitext
@@ -24,6 +24,8 @@ From {{etyl|ar}} {{term|صوم|صَوْم|tr=ṣawm|fasting; abstaining from foo
 * Kazakh: {{t|kk|ораза|tr=oraza|sc=Cyrl}}
 * Korean: {{t|ko|사움|tr=saum}}
 {{trans-mid}}
+* Kurdish: {{t|ku|rojî}}
+*: Sorani: {{tø|ckb|ڕۆژوو|tr=rojû|sc=ku-Arab}}
 * Malay: [[puasa]]
 * Persian: {{t|fa|روزه|tr=roza}}
 * Polish: {{t-|pl|saum|m}}
