--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -14,6 +14,7 @@
 # of the [[United States]] of America; American
 
 ===See also===
+* [[americano#Spanish|americano]]
 * [[yanqui#Spanish|yanqui]]
 * [[gringo#Spanish|gringo]]
 * [[norteamericano#Spanish|norteamericano]]
