--- a/en/i/indwell.742111.wikitext
+++ b/en/i/indwell.742111.wikitext
@@ -6,9 +6,11 @@ From {{prefix|in|dwell}}.
 *{{a|UK}} {{IPA|/ɪnˈdwɛl/}}
 
 ===Verb===
-{{en-verb}}
+{{en-verb|indwells|indwelling|'''[[indwelled]]''' or '''[[indwelt]]'''}}
 
 # To [[exist]] within, especially as a spirit or driving force.
+#* Milman
+#*: The Holy Ghost became a dove, not as a symbol, but as a constantly '''indwelt''' form.
 #*'''2009''', {{w|Diarmaid MacCulloch}}, ''A History of Christianity'', Penguin 2010, p. 224:
 #*:Diodore and Theodore were particularly galvanized to defend their point of view by their horror at Apollinaris's assertion that Christ was '''indwelled''' by the Logos, which replaced a human mind in him.
 
