--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -109,6 +109,8 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 ----
 
 ==Hungarian==
+===Etymology===
+{{etyl|la|hu}} {{term|-um|lang=la||2nd declension neuter nominative singular termination}}
 
 ===Pronunciation===
 * {{IPA|/um/|lang=hu}}
