/* Related terms */ down bubble, up bubble <bubble#17163214>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -157,9 +157,11 @@ Partly imitative, also influenced by {{term|burble}}.
 {{rel-mid}}
 * [[bubble and squeak]]
 * [[burst someone's bubble]]
+* [[down bubble]]
 * [[housing bubble]]
 * [[land bubble]]
 * [[stock bubble]]
+* [[up bubble]]
 * [[on the bubble]]
 * [[bubble team]]
 * [[boy in the bubble]]
