--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -27,22 +27,20 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 
 ====Translations====
 {{trans-top|Mustela erminea}}
-* Albanian: [[ermelina]], {{t|sq|ermelina}}
+* Albanian: {{t|sq|ermelina}}
 * Armenian: {{t+|hy|կնգում|tr=kngum}}, {{t-|hy|սպիտակ աքիս|tr=spitak ak’is}}
 * Basque: [[erbinude zuri]]
-* Belarusian: [[гарнастай]], {{t|be|гарнастай|m|tr=harnastáj|sc=Cyrl}}
-* Bosnian: {{t|bs|hermelin|m}}
+* Belarusian: {{t|be|гарнастай|m|tr=harnastáj|sc=Cyrl}}
 * Breton: [[erminig]]
-* Bulgarian: {{t|bg|хермелин|tr=hermelin|m}}
+* Bulgarian: {{t|bg|хермелин|m|tr=hermelin}}
 * Catalan: [[ermini]]
 * Chinese:
 *: Mandarin: {{t|zh|白鼬|tr=báiyòu|sc=Hani}}
-* Croatian: [[zerdav]]
 * Czech: {{t-|cs|hranostaj|m}}
 * Danish: {{t|da|hermelin|c}}, {{t|da|lækat|c}}
 * Dutch: {{t+|nl|hermelijn|m}}
 * Esperanto: [[ermeno]]
-* Estonian: [[kärp]], [[lahits]], [[hermeliin]], {{t|et|kärp}}, {{t|et|lahits}}, {{t|et|hermeliin}}
+* Estonian: {{t|et|kärp}}, {{t|et|lahits}}, {{t|et|hermeliin}}
 * Faroese: {{t|fo|roysikøttur}}
 * Finnish: {{t+|fi|kärppä}}
 * French: {{t+|fr|hermine|f}}
@@ -57,9 +55,9 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Japanese: {{t|ja|オコジョ|tr=okojo|sc=Jpan}}
 * Ladin: [[armelin]]
 * Latin: [[Mustela erminea]] {{f}}
-* Latvian: [[sermulis]], {{t|lv|sermulis|m}}
-{{trans-mid}}
+* Latvian: {{t|lv|sermulis|m}}
 * Lithuanian: {{t-|lt|šermuonėlis|xs=Lithuanian}}
+{{trans-mid}}
 * Lower Sorbian: [[hermelin]]
 * Macedonian: {{t|mk|хермелин|m|tr=hermelín}}, {{t|mk|ермелин|m|tr=ermelín}}
 * Maltese: [[ermellin]]
@@ -69,22 +67,21 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Polish: {{t|pl|gronostaj|m}}
 * Portuguese: {{t-|pt|arminho|m}}
 * Romani: [[ermina]] {{f}}
-* Romanian: [[hermelina]], {{t|ro|hermelina|f}}
+* Romanian: {{t|ro|hermelina|f}}
 * Romansch: [[ermelin]]
-* Russian: {{t|ru|горностай|tr=gornostáj|m}}
+* Russian: {{t|ru|горностай|m|tr=gornostáj}}
 * Sami: [[buoidda]]
 * Sardinian: [[ermellinu]]
 * Scottish Gaelic: {{t-|gd|neas|f|xs=Scottish Gaelic}}, {{t-|gd|neas mhòr|f|xs=Scottish Gaelic}}
-* Serbian: [[zerdav]] {{m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|хермелин|m}}, {{t|sh|зердав|m}}
 *: Roman: {{t|sh|hermelin|m}}, {{t|sh|zerdav|m}}
-* Slovak: [[lasica hranostaj]], {{t|sk|hranostaj|m}}
-* Slovene: {{t+|sl|hermelin}}
+* Slovak: {{t|sk|hranostaj|m}}
+* Slovene: {{t+|sl|hermelin|m}}
 * Spanish: {{t+|es|armiño|m}}
 * Swedish: {{t-|sv|hermelin|c}}, {{t|sv|lekatt|c}}
 * Turkish: {{t+|tr|as}}, {{t+|tr|kakım}}, {{t+|tr|ermin}}
-* Ukrainian: {{t|uk|горностай|tr=gornostaj|m}}
+* Ukrainian: {{t|uk|горностай|m|tr=hornostáj}}
 * Upper Sorbian: [[hermelin]], [[hronostaj]]
 * Volapük: {{qualifier|♂♀}} {{t|vo|härmin}}, {{qualifier|♂}} {{t|vo|hihärmin}}, {{qualifier|♀}} {{t|vo|jihärmin}}, {{qualifier|♂♀ offspring, young}} {{t|vo|härminül}}, {{qualifier|♂ offspring}} {{t|vo|hihärminül}}, {{qualifier|♀ offspring}} {{t|vo|jihärminül}}
 * Welsh: [[carlwm]]
@@ -92,12 +89,13 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 {{trans-bottom}}
 
 {{trans-top|the white fur of this animal}}
-* Bulgarian: {{t|bg|хермелин|m|sc=Cyrl}}
+* Bulgarian: {{t|bg|хермелин|m|tr=hermelin}}
 * Czech: {{t-|cs|hranostaj|m}}
 * Finnish: [[kärpännahka]], [[hermeliini]]
-{{trans-mid}}
 * French: {{t+|fr|hermine|f}}
+{{trans-mid}}
 * German: {{t|de|Hermelin|m}}
+* Russian: {{t|ru|горностай|m|tr=gornostáj}}
 * Volapük: {{qualifier|untanned}} {{t|vo|härminaskin}}, {{t|vo|härminapläd}}, {{t|vo|visafot}}
 {{trans-bottom}}
 
@@ -113,7 +111,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Finnish: {{t-|fi|kärpännahka}}
 * French: {{t+|fr|hermine|f}}
 {{trans-mid}}
-* German: {{t|de|Hermelin}}
+* German: {{t|de|Hermelin|n}}
 * Macedonian: {{t|mk|хермелин|m|tr=hermelín}}
 {{trans-bottom}}
 
