--- a/en/s/stoat.8235.wikitext
+++ b/en/s/stoat.8235.wikitext
@@ -11,15 +11,7 @@
 # An [[ermine]] with its summer coat.
 
 ====Translations====
-{{trans-top|an ermine}}
-* German: {{t|de|Hermelin|n}}
-* Hungarian: {{t|hu|hermelin}}
-* Jèrriais: {{tø|roa-jer|b'lette|f}}
-{{trans-mid}}
-* Navajo: {{tø|nv|dlǫ́ʼiiłgaii}}
-* Polish: {{t|pl|gronostaj}}
-* Volapük: {{qualifier|male or female}} {{t|vo|härmin}}
-{{trans-bottom}}
+{{trans-see|ermine}}
 
 ===Anagrams===
 * [[toast#English|toast]]
