* <whatever it takes#17173240>

--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -1,20 +1,16 @@
 ==English==
 
+===Alternative forms===
+* [[whatever is necessary]]
+
 ===Noun===
 {{en-noun|sg=[[whatever]] [[it]] [[takes]]|-}}
 
-# Anything that may be [[required]] to [[achieve]] an [[objective]].
+# Anything, including something [[wrongful]], that may be [[required]] to [[achieve]] an [[objective]].
 #: We stand ready to do '''whatever it takes'''.
 
-===Adverb===
-{{en-adv|-}}
-
-# Strong [[affirmation]] of [[willingness]].
-#* Question: Are you proposing we kidnap the ambassador?
-#*: Answer: '''Whatever it takes'''.
-
 ====Translations====
-{{trans-top|affirmation of willingness}}
+{{trans-top|anything required to achieve an objective}}
 * French: {{t|fr|faire tout ce qui est nécessaire pour arriver à quelque chose}}
 {{trans-mid}}
 * Spanish: [[todo lo que sea  necesario]].
