--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -14,10 +14,10 @@
 
 ====Translations====
 {{trans-top|anything required to achieve an objective}}
-* French: {{t|fr|faire tout ce qui est nécessaire pour arriver à quelque chose}}
+* French: {{t|fr|tout ce qui est nécessaire}}
 * Russian: {{t|ru|во что бы то ни стало|tr=vo štó by to ni stálo|sc=Cyrl}}
 {{trans-mid}}
-* Spanish: [[todo lo que sea  necesario]].
+* Spanish: {{t|es|todo lo que sea  necesario}}
 {{trans-bottom}}
 
 ===See also===
