t+roa-jer:[[lapîn]] t-balance ([[WT:EDIT|Assisted]]) <rabbit#17180560>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Irish: {{t+|ga|coinín|xs=Irish}}
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: {{t|ja|兎|tr=[[うさぎ]], usagi|sc=Jpan}}, {{t|ja|ウサギ|tr=usagi|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|lapîn|m}}
 * Khmer: {{t|km|ទន្សាយគល់|tr=tʊənsaay kʊəl|sc=Khmr}}
 * Korean: {{t+|ko|토끼|tr=tokki|sc=Hang}}
 * Kurdish:
@@ -102,8 +103,8 @@ From {{etyl|enm}} {{term|rabet|lang=enm}}, from {{etyl|frm}} dialect (compare {{
 * Latvian: [[trusis]]
 * Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
 * Lojban: {{t|jbo|ractu}}
-* Lower Sorbian: [[karnikel]]
 {{trans-mid}}
+* Lower Sorbian: [[karnikel]]
 * Macedonian: [[заjак]] (zajak) {{m}}
 * Malay: {{t+|ms|arnab|xs=Malay}}
 * Maltese: {{t-|mt|fenek|m|xs=Maltese}}
