--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -78,7 +78,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 * Bulgarian: {{t+|bg|свиня|f|tr=svinjá}}
 * Burmese: {{t|my|ဝက်|tr=wé|sc=Mymr}}
 * Campidanese Sardinian: [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
-* Catalan: [[porc]] {{m}}
+* Catalan: {{t|ca|porc|m}}
 * Cebuano: [[baboy]]
 * Chamicuro: {{tø|ccc|kuuchi}}
 * Chamorro: [[babui]]
@@ -87,7 +87,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 *: Mandarin: {{t|zh|豬|sc=Hani}}, {{t|zh|猪|tr=zhū|sc=Hani}}
 * Comox: {{tø|coo|kʷašu}}
 * Cornish: {{t-|kw|hogh|m|xs=Cornish}}, {{t-|kw|mogh|p|xs=Cornish}}
-* Czech: {{t+|cs|prase|n}}
+* Czech: {{t+|cs|prase|n}}, {{t|cs|vepř|m}}, {{t|cs|svině|f}}
 * Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
 * Erzya: [[туво]] (tuvo)
@@ -96,7 +96,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 * Evenki: {{tø|evn|сунюрин|tr=suņurin}}
 * Faroese: {{t-|fo|svín|n|xs=Faroese}}
 * Finnish: {{t+|fi|sika}}
-* French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
+* French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}, {{t+|fr|pourceau|m}}
 *: [[Old French]]: {{tø|fro|porc|m}}, {{tø|fro|bacon|m}}
 * Friulian: [[purcit]] {{m}}
 * Galician: [[porco#Galician|porco]] {{m}}
@@ -117,7 +117,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 *: [[Mandar]]: boe
 * Interlingua: [[porco#Interlingua|porco]]
 * Irish: {{t+|ga|muc|f|xs=Irish}}
-* Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}
+* Italian: {{t+|it|maiale|m}}, {{t+|it|porco|m}}, {{t+|it|suino|m}}
 * Japanese: {{t|ja|豚|tr=[[ぶた]], buta}}, {{t|ja|ブタ|tr=buta|sc=Jpan}}
 * Kannada: {{t|kn|ಹಂದಿ|tr=handi|sc=Knda}}
 * Karelian: [[počči]]
@@ -154,11 +154,11 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 * Old Church Slavonic: {{tø|cu|свиниꙗ|f|tr=svinija|sc=Cyrs}}
 * Persian: {{t|fa|خوک|tr=xuk|sc=fa-Arab}}
 * Polish: {{t+|pl|świnia|f}}
-* Portuguese: {{t+|pt|porco|m}}
+* Portuguese: {{t+|pt|porco|m}}, {{t|pt|suíno|m}}
 * Romani: [[balo]] {{m}}, [[bali]] {{f}}
 * Romanian: {{t+|ro|porc|m}}
 * Romansch: {{t|rm|portg|m}}, {{t|rm|piertg|m}}, {{t|rm|püerch|m}}, {{t|rm|chucal|m}}
-* Russian: {{t+|ru|свинья|f|tr=svin’já}}
+* Russian: {{t+|ru|свинья|f|tr=svinʹjá}}
 * Sami: [[spiidni]]
 * Samoan: {{t|sm|pua'a|xs=Samoan}}
 * Sanskrit: {{t|sa|सूकरः|tr=sūkaraḥ|sc=Deva}}
