--- a/en/m/microbicidal.720199.wikitext
+++ b/en/m/microbicidal.720199.wikitext
@@ -8,6 +8,9 @@
 
 # Of, pertaining to, or functioning as a [[microbicide]]
 
+====See also====
+*[[microstatic]]
+
 ====Translations====
 {{trans-top|of, pertaining to, or functioning as a microbicide}}
 * Catalan: {{t|ca|microbicida}}
