/* See also */ <catch hell#17267065>

--- a/en/c/catch hell.802514.wikitext
+++ b/en/c/catch hell.802514.wikitext
@@ -5,7 +5,7 @@
 
 # {{idiomatic}} be severely reprimanded, punished, or beaten
 
-===See also===
+===Synonyms===
 * [[catch it]]
 * [[cop it]]
 * [[get it]]
