--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -81,7 +81,9 @@ From {{etyl|xno}} {{term|esquirel|lang=xno}}, from {{etyl|fro}} {{term|escurel|l
 * Lower Sorbian: {{tø|dsb|njewjericka|f|xs=Lower Sorbian}}
 * Luxembourgish: {{t|lb|Kaweechelchen}}
 * Macedonian: {{t|mk|верверица|f|tr=vervérica}}
-* Malay: {{t|ms|tupai}}
+* Malay:
+*: Rumi: {{t|ms|tupai}}
+*: Jawi: {{t|ms|توڤاي}}
 * Maltese: {{t|mt|skwiril|m|xs=Maltese}}
 * Navajo: {{tø|nv|tseekʼi nástánii}}
 * Norwegian: {{t+|no|ekorn|n}}
