t+zh:[[工作人員]] t-balance t+zh:[[工作人员]] ([[WT:EDIT|Assisted]]) <staff#17301735>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -95,7 +95,7 @@
 {{trans-top|employees of a business}}
 * Catalan: {{t+|ca|staff|m}}, {{t-|ca|plantilla|f}}
 * Chinese:
-*: Mandarin: {{t|zh|員工|sc=Hani}}, {{t|zh|员工|tr=yuángōng|sc=Hani}}, {{t|zh|人員|sc=Hani}}, {{t|zh|人员|tr=rényuán|sc=Hani}}
+*: Mandarin: {{t|zh|員工|sc=Hani}}, {{t|zh|员工|tr=yuángōng|sc=Hani}}, {{t|zh|人員|sc=Hani}}, {{t|zh|人员|tr=rényuán|sc=Hani}}, {{t|zh|工作人員|sc=Hani}}, {{t|zh|工作人员|tr=gōngzuò rényuán|sc=Hani}}
 * Czech: {{t-|cs|personál|m}}
 * Danish: {{t|da|stab|c}}, {{t|da|personale|n}}
 * Dutch: {{t+|nl|medewerkers|p}}, {{t|nl|personeel|n}}
@@ -103,8 +103,8 @@
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
 * German: {{t+|de|Belegschaft|f}}, {{t+|de|Personal|n}}, {{t+|de|Stab|m}}
 * Greek: {{t|el|προσωπικό|n|tr=prosopikó|sc=Grek}}, {{t|el|επιτελείο|n|tr=epiteleío|sc=Grek}}
-* Italian: {{t+|it|personale|m}}, {{t|it|organico|m}}
 {{trans-mid}}
+* Italian: {{t+|it|personale|m}}, {{t|it|organico|m}}
 * Japanese: {{t|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t|ja|スタッフ|tr=sutaffu|sc=Jpan}}
 * Macedonian: {{t-|mk|персонал|m|tr=personál}}, {{t|mk|кадар|m|tr=kádar}}
 * Polish: {{t-|pl|personel|m}}, {{t|pl|pracownicy|p}}
