--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -65,7 +65,7 @@ From {{etyl|enm}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from {{
 * French: {{t+|fr|assister}},  {{t+|fr|présent|alt=être présent}}
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 {{trans-mid}}
-* Hungarian: {{t|hu|eljár}}, {{t+|hu|jár}}
+* Hungarian: {{t|hu|eljár}}, {{t+|hu|jár}}, {{t|hu|részt vesz}}
 * Italian: {{t|it|partecipare}}
 * Japanese: {{t+|ja|出席|alt=出席する|tr=しゅっせきする, shusseki-surú}},  {{t|ja|立ち会う|tr=たちあう, tachiau}}
 * Polish: [[uczęszczać]], [[brać udział]]
