/* English */ fmt ====Quotations==== <engraft#17319964>

--- a/en/e/engraft.773715.wikitext
+++ b/en/e/engraft.773715.wikitext
@@ -13,6 +13,9 @@ From earlier {{term|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft}}.
 # To insert, as a [[scion]] of one tree or plant into another, for the purpose of [[propagation]]; [[graft]] onto a plant
 # To [[fix]] firmly into place
 
+====Quotations====
+* {{seeCites}}
+
 ====Translations====
 {{trans-top|To insert, as a [[scion]]}}
 * Bulgarian: {{t|bg|присаждам}}, {{t|bg|ашладисвам}}
@@ -24,10 +27,6 @@ From earlier {{term|ingraft}}, equivalent to {{prefix|en|gloss1=in|graft}}.
 {{en-adj}}
 
 # {{rare}} [[engrafted|Engrafted]].
-
-
-====Quotations====
-{{seeCites}} 
 
 [[et:engraft]]
 [[fr:engraft]]
