--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -3,14 +3,13 @@
 ===Etymology===
 From {{prefix|multi|million}}.
 
-===Noun===
-{{en-noun}}
+===Adjective===
+{{head|en|adjective}}
 
-# An [[amount]] in the millions.
-# An amount with [[multiple]]s of one million.
+# Having more than 2,000,000 in the million range.
 
 ====Translations====
-{{trans-top}}
+{{trans-top|having more than 2,000,000 in the million range.}}
 * French: {{t+|fr|multimillion}}
 {{trans-mid}}
 * Italian: {{t|it|multimillione}}
