--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -11,8 +11,9 @@ From {{prefix|multi|million}}.
 ====Translations====
 {{trans-top|having more than 2,000,000 in the million range.}}
 * French: {{t+|fr|multimillion}}
-{{trans-mid}}
 * Italian: {{t|it|multimillione}}
+{{trans-mid}}
+* Russian: {{t|ru|многомиллионный|tr=mnogomilliónnyj|sc=Cyrl}}
 {{trans-bottom}}
 
 ====Related terms====
