--- a/en/m/multibillion.34082.wikitext
+++ b/en/m/multibillion.34082.wikitext
@@ -16,8 +16,9 @@ MOHL-tee-BIL-li-uhn
 ====Translations====
 {{trans-top|having more than 2,000,000,000 in the billion range}}
 * French: {{t+|fr|multibillion}}
-{{trans-mid}}
 * Italian: {{t|it|multibillione}}
+{{trans-mid}}
+* Russian: {{t|ru|многомиллиардный|tr=mnogomilliárdnyj|sc=Cyrl}}
 {{trans-bottom}}
 
 [[fr:multibillion]]
