t+fi:[[monimiljoonainen]] ([[WT:EDIT|Assisted]]) <multimillion#17320683>

--- a/en/m/multimillion.34080.wikitext
+++ b/en/m/multimillion.34080.wikitext
@@ -10,7 +10,7 @@ From {{prefix|multi|million}}.
 
 ====Translations====
 {{trans-top|having more than 2,000,000 in the million range.}}
-* {{trreq|Finnish}}
+* Finnish: {{t|fi|monimiljoonainen}}
 * French: {{t+|fr|multimillion}}
 {{trans-mid}}
 * Italian: {{t|it|multimillione}}
