--- a/en/m/multibillion.34082.wikitext
+++ b/en/m/multibillion.34082.wikitext
@@ -15,7 +15,7 @@ MOHL-tee-BIL-li-uhn
 
 ====Translations====
 {{trans-top|having more than 2,000,000,000 in the billion range}}
-* {{trreq|Finnish}}
+* Finnish: {{t|fi|monimiljardinen}}
 * French: {{t+|fr|multibillion}}
 {{trans-mid}}
 * Italian: {{t|it|multibillione}}
