--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -5,6 +5,9 @@
 # {{idiomatic}} [[sane|Sane]], [[sensible]], [[reasonable]]; thinking [[clearly]].
 #: ''I used to think that nobody '''in his right mind''' would pay that much for such a thing, but people must pay it all the time, or the company wouldn't be in business.''
 
+====Related terms====
+* [[right-minded]]
+
 ====Translations====
 {{trans-top|sane}}
 * Finnish: [[olla]] [[järjissä]][[-än|än]]
