--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -65,6 +65,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm}} {{term|seisen|lang=enm}}, {{te
 * Latin: {{t-|la|capere}}, {{t|la|possideo}}
 * Norwegian: {{t-|no|gripe}}
 * Old English: {{t-|ang|niman|xs=Old English}}
+* Old Portuguese: {{tø|roa-ptg|tomar}}
 * Ottoman Turkish: {{tø|ota|استولى على|tr=istevli ele|sc=ota-Arab}}
 * Portuguese: {{t+|pt|agarrar}}, {{t+|pt|capturar}}
 * Russian: {{t|ru|захватывать|tr=zaxvátyvat’}} {{impf}}, {{t|ru|захватить|tr=zaxvatít’}} {{pf.}}, {{t|ru|схватывать|tr=sxvátyvat’}} {{impf}}, {{t|ru|схватить|tr=sxvatít’}} {{pf.}}
