* <in one's right mind#17353240>

--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -14,6 +14,9 @@
 #* '''2010''' Oct. 31, Alice Park, "[http://www.time.com/time/magazine/article/0,9171,2025572,00.html New Research on Understanding Alzheimer's]," ''Time'':
 #*: Who '''in his right mind''' would want to know he had a disease that would inevitably rob him of that mind?
 
+====Antonyms====
+* [[out of one's mind]]
+
 ====Related terms====
 * [[right-minded]]
 
@@ -23,6 +26,3 @@
 {{trans-mid}}
 * Russian: [[в здравом уме]] /in healthy mind/, [[в своём уме]] /in one's own mind/
 {{trans-bottom}}
-
-===See also===
-* [[out of one's mind]]
