--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -88,6 +88,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 * Comox: {{tø|coo|kʷašu}}
 * Cornish: {{t-|kw|hogh|m|xs=Cornish}}, {{t-|kw|mogh|p|xs=Cornish}}
 * Czech: {{t+|cs|prase|n}}, {{t|cs|vepř|m}}, {{t|cs|svině|f}}
+* Dalmatian: {{t|dlm|puarc|m}}
 * Danish: {{t+|da|svin|n}}, {{t+|da|gris|c}}
 * Dutch: {{t+|nl|zwijn|n}}, {{t+|nl|varken|n}}
 * Erzya: [[туво]] (tuvo)
@@ -162,6 +163,7 @@ From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{rec
 * Sami: [[spiidni]]
 * Samoan: {{t|sm|pua'a|xs=Samoan}}
 * Sanskrit: {{t|sa|सूकरः|tr=sūkaraḥ|sc=Deva}}
+* Sardinian: {{t|sc|porcu}}
 * Scottish Gaelic: [[muc]] {{f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|свиња|f}}
