--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -26,6 +26,7 @@ From {{etyl|es}} {{term|las|lang=es}} {{term|vegas||the meadows|lang=es}}.
 * Greek: {{t|el|Λας Βέγκας|n|tr=Las Végas}}
 * Japanese: {{t|ja|ラスベガス|tr=Rasubegasu}}
 * Korean: {{t|ko|라스베이거스|tr=Laseubeigeoseu|sc=Hang}}
+* Marathi: {{t|mr|लास व्हेगस|n|tr=lāsa vhegāsa|sc=Deva}}
 * Navajo: {{tø|nv|Naʼazhǫǫsh hátsoh}}
 * Russian: {{t|ru|Лас-Вегас|m|tr=Las-Végas}}
 * Turkish: {{t|tr|Las Vegas}}
