--- a/en/r/rasante.802841.wikitext
+++ b/en/r/rasante.802841.wikitext
@@ -1,3 +1,18 @@
+==English==
+
+===Etymology===
+{{etyl|fr}}, present participle of {{term|raser}} to graze.
+
+===Adjective===
+{{en-adj}}
+
+# {{military|historical}} [[sweep|Sweeping]]; [[graze|grazing]]; applied to a style of [[fortification]] in which the command of the works over each other, and over the country, is kept very low, so that the shot may more effectually sweep or graze the ground before them.
+#: {{rfquotek|H. L. Scott}}
+
+{{Webster 1913}}
+
+----
+
 ==French==
 
 ===Adjective===
