/* English */ +Nine <nonary#17435975>

--- a/en/n/nonary.802775.wikitext
+++ b/en/n/nonary.802775.wikitext
@@ -33,6 +33,8 @@ From the {{etyl|la|en}} {{term|nonarius|nōnārius|lang=la}}, from {{term|nonus|
 * [[duodenary]] (12)
 * [[vigenary]] (20)
 
+[[Category:en:Nine]]
+
 [[lo:nonary]]
 [[vi:nonary]]
 [[zh:nonary]]
