--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -7,4 +7,6 @@
 
 # {{US}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
 
+[[Category:en:One]]
+
 [[et:onesie]]
