--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -7,6 +7,7 @@
 
 # {{US}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
 
+[[Category:en:Clothing]]
 [[Category:en:One]]
 
 [[et:onesie]]
