--- a/en/f/felsic.776709.wikitext
+++ b/en/f/felsic.776709.wikitext
@@ -9,11 +9,19 @@
 
 # {{mineralogy}} Enriched in the lighter elements such as silicon, oxygen, aluminium, sodium, and potassium.
 
+====Synonyms====
+* [[acidic]]
+
 ====Antonyms====
 * [[mafic]]
 
 ====Related terms====
 * [[felsite]]
+
+===Noun===
+{{en-noun}}
+
+# A rock with such properties.
 
 [[et:felsic]]
 [[zh:felsic]]
