/* Usage notes */ <bitter pill to swallow#17489122>

--- a/en/b/bitter pill to swallow.855106.wikitext
+++ b/en/b/bitter pill to swallow.855106.wikitext
@@ -19,6 +19,7 @@
 * ''Bitter pill(s) to swallow'' is not a set phrase. Only a little more than 40% of the usage at [[COCA]] with a form of ''swallow'' within 9 words before or after is of the form given. 
 * Other verbs such as ''take'', ''down'', and ''digest'' may replace ''swallow''.
 * Other adjectives modify ''pill'' about 60% of the time: ''hard'', ''tough'', ''bad'', ''difficult'', even ''easy''.
+* About one third of the time ''bitter pill'' appears without any such verb nearby.
 
 ====See also====
 * [[hard pill to swallow]]
