--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -277,6 +277,7 @@ See {{l|da|bide}}.
 {{head|sga|verb form}}
 
 # {{conjugation of|is||3|s|past|sub|lang=sga}}
+# {{conjugation of|is||3|s|fut|lang=sga}}
 
 ----
 
