t+xcl:[[ախազ]] ([[WT:EDIT|Assisted]]) <ermine#17521773>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -30,6 +30,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{term|mus|mūs|lang=la}} {{te
 * Albanian: {{t|sq|ermelina}}
 * Arabic: {{t|ar|قاقم|m|tr=qāqim|sc=Arab}}
 * Armenian: {{t+|hy|կնգում|tr=kngum}}, {{t-|hy|սպիտակ աքիս|tr=spitak ak’is}}
+*: Old Armenian: {{tø|xcl|ախազ|tr=axaz|sc=Armn}}
 * Basque: [[erbinude zuri]]
 * Belarusian: {{t|be|гарнастай|m|tr=harnastáj|sc=Cyrl}}
 * Breton: [[erminig]]
