t+eo:[[konsumi]] ([[WT:EDIT|Assisted]]) <consume#17594279>

--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -57,6 +57,7 @@ From {{etyl|la}} ''[[consumere]]''.
 {{trans-top|to eat}}
 * Bulgarian: {{t|bg|изяждам}},  {{t+|bg|изпивам}}
 * Dutch: {{t+|nl|consumeren}}
+* Esperanto: {{t|eo|konsumi}}
 * Finnish: {{t+|fi|kuluttaa}}, {{t+|fi|syödä}}
 * French: {{t+|fr|consommer}}
 * Hebrew: {{t|he|צרך|tr=tsarákh}}
