--- a/en/d/deformable.855595.wikitext
+++ b/en/d/deformable.855595.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Pronunciation===
-* {{a|UK}} {{IPA|/dɪˈfɔː(ɹ)məbəɫ/}}
+* {{a|UK}} {{IPA|[dɪˈfɔː(ɹ)məbəɫ]}}
 
 ===Adjective===
 {{en-adj}}
