t+ru:[[прыгать]] ([[WT:EDIT|Assisted]]) <bound#17647513>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -187,6 +187,7 @@ From {{etyl|fr}} {{term|bondir||to leap, bound, originally make a loud resoundin
 * French: {{t+|fr|bondir}}, {{t+|fr|sauter}}
 {{trans-mid}}
 * Italian: {{t|it|balzare}}
+* Russian: {{t|ru|прыгать|n|tr=prýgat’|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t-|gd|leum|xs=Scottish Gaelic}}
 * Swedish: {{t+|sv|skutta}}
 {{trans-bottom}}
