--- a/en/י/ישראל.4258.wikitext
+++ b/en/י/ישראל.4258.wikitext
@@ -4,11 +4,11 @@
 {{wikipedia|lang=he}}
 
 ===Pronunciation===
-* {{audio|He-Medinat_Israel.ogg|Audio}} ({{Hebr|[[מְדִינַת יִשְׂרָאֵל]]}})
+* {{term|מדינת ישראל|מְדִינַת יִשְׂרָאֵל|State of Israel|tr=medinát yisra'él|lang=he}}: {{audio|He-Medinat_Israel.ogg|Audio}}
 
 ===Proper noun===
 [[Image:Flag_of_Israel.svg|thumb|right|דגל ישראל]]
-{{head|he|proper noun|sc=Hebr|head=יִשְׂרָאֵל|g=m|tr=Yisra'el}}
+{{he-proper noun|wv=יִשְׂרָאֵל|g=m|tr=Yisra'él}}
 
 # the [[patriarch]] [[Israel]]
 # the [[child|children]] of [[Israel]], the [[Jewish]] [[people]]
@@ -16,10 +16,11 @@
 # {{given name|male|lang=he}}, [[Israel]]
 
 ====Related terms====
-* [[ארץ ישראל|אֶרֶץ יִשְׂרָאֵל]]<!--x-->
-* [[ישראלי|יִשְׂרְאֵלִי]]<!--x-->
-* [[עם ישראל|עַם יִשְרָאֵל]]<!--x-->
-* [[מדינת ישראל|מְדִינַת יִשְרָאֵל]]<!--x-->
+* {{l|he|ארץ ישראל|אֶרֶץ יִשְׂרָאֵל}}
+* {{l|he|ישראלי|יִשְׂרְאֵלִי}}
+* {{l|he|עם ישראל|עַם יִשְרָאֵל}}
+* {{l|he|בני ישראל|בְּנֵי יִשְרָאֵל}}
+* {{l|he|מדינת ישראל|מְדִינַת יִשְרָאֵל}}
 
 [[Category:he:Countries]]
 
