t+fi:[[sitoa]] t+fi:[[kytkeä]] ([[WT:EDIT|Assisted]]) <bind#17720145>

--- a/en/b/bind.6798.wikitext
+++ b/en/b/bind.6798.wikitext
@@ -61,6 +61,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 {{trans-top|couple}}
 * Bulgarian: {{t+|bg|връзвам}},  {{t-|bg|приързвам}}
 * Czech: {{t-|cs|spojit}}
+* Finnish: {{t|fi|sitoa}}, {{t|fi|kytkeä}}
 * German: {{t+|de|verbinden}}
 * Italian: [[connettere]]
 {{trans-mid}}
@@ -72,6 +73,7 @@ From {{etyl|ang}} ''[[bindan]]'', from {{proto|Germanic|bindanan}} (compare West
 * Bulgarian: {{t-|bg|подвързвам}}
 * Czech: {{t+|cs|svázat}}
 * Esperanto: {{t-|eo|bindi|xs=Esperanto}}
+* Finnish: {{t|fi|sitoa}}
 * German: {{qualifier|z.B. ein Buch}} {{t+|de|binden}}
 * Greek: {{t+|el|βιβλιοδετώ|tr=vivliodetó|sc=Grek}}
 * Italian: [[rilegare]]
