/* Etymology 1 */ format, punctuation <pig#17739730>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -2,9 +2,9 @@
 {{wikipedia}}
 
 ===Etymology 1===
-From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{recons|picga|lang=ang}} (attested only in compounds, such as {{term|picgbread|picgbrēad|mast, pig's food|lang=ang}}), pet-form related to {{etyl|fy|-}} {{term|bigge||pigling|lang=fy}}, {{etyl|gmw-lge|-}} {{term|Pugge||pet pig|lang=nds}}. Of uncertain origin.<br>
-* {{sense|police officer}} British slang from ''ante'' 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams
-, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
+From {{etyl|enm}} {{term|pigge||pig, pigling|lang=enm}}, from {{etyl|ang}} {{recons|picga|lang=ang}} (attested only in compounds, such as {{term|picgbread|picgbrēad|mast, pig's food|lang=ang}}), pet-form related to {{etyl|fy|-}} {{term|bigge||pigling|lang=fy}}, {{etyl|gmw-lge|-}} {{term|Pugge||pet pig|lang=nds}}, of uncertain origin.
+
+British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victoria Fromkin, Robert Rodman, Nina M. Hyams, ''An Introduction to Language'', [http://books.google.com.au/books?id=7PftAAAAMAAJ&q=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y page 474] — Similarly, the use of the word '''''pig''''' for “policeman” goes back at least as far as 1785, when a writer of the time called a Bow Street police officer a “China Street '''pig'''.”</ref>
 
 ====Pronunciation====
 * {{IPA|/pɪɡ/}}
