t+pt:[[dama]] t-balance ([[WT:EDIT|Assisted]]) <dame#17835768>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -26,11 +26,13 @@
 ====Translations====
 {{trans-top|archaic: lady, woman}}
 * Hindi: Urath
+* Portuguese: {{t|pt|dama|f}}
 {{trans-mid}}
 * Scottish Gaelic: {{t+|gd|baintighearna|f|xs=Scottish Gaelic}}
 {{trans-bottom}}
 
 {{trans-top|equivalent title to Sir for a female knight}}
+* Portuguese: {{t|pt|dama|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
