--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -181,7 +181,7 @@ From earlier {{term|iland|lang=en}}, from {{etyl|enm}} {{term|iland|lang=enm}}, 
 * Romanian: {{t-|ro|insulă|f}}
 * Romansch: {{t-|rm|insla|f|xs=Romansch}}
 * Russian: {{t+|ru|остров|m|tr=óstrov}}
-* Sakha: {{tø|sah|арыы|tr=arıı|sc=Cyrl}}
+* Yakut: {{tø|sah|арыы|tr=arıı|sc=Cyrl}}
 * Sanskrit: {{t|sa|जलवेष्टितभूमिः}}
 * Sardinian: {{t|sc|isula|f}}
 * Scottish Gaelic: {{t-|gd|eilean|m|xs=Scottish Gaelic}},  {{t-|gd|innis|f|xs=Scottish Gaelic}}
