as far as I know, in the UK it's always /pəʊlkæt/ <polecat#18088080>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -1,18 +1,18 @@
 ==English==
 [[Image:Marbled polecat.jpg|thumb|right|A [[marbled polecat]] (weasel-like animal).]]
-
-===Pronunciation===
-* {{IPA|/ˈpɔlkæt/}}
-
+{{wikipedia}}
 ===Etymology===
 From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named because of its fondness for poultry.
-{{wikipedia}}
+
+===Pronunciation===
+* {{IPA|/ˈpɑlkæt/}}
+* {{IPA|/ˈpəʊlkæt/}}
 
 ===Noun===
 {{en-noun}}
 
 # A [[weasel]]-like animal of the genus ''[[Mustela]]'', notably the [[European polecat]], {{spelink|Mustela putorius}}.
-# {{US|dialect}} a [[skunk]]
+# {{US|dialect}} A [[skunk]].
 
 ====Quotations====
 * '''1919,''' [[w:Ronald Firbank|Ronald Firbank]], ''[[w:Valmouth|Valmouth]]'', Duckworth, hardback edition, page 61
@@ -26,7 +26,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 
 ====Translations====
 {{trans-top|''Mustela putorius''}}
-* Albanian: {{t-|sq|qelbësi|xs=Albanian}}
+* Albanian: {{t-|sq|qelbësi}}
 * Armenian: {{t-|hy|ժանտաքիս|tr=žantak'is}}
 * Basque: [[ipurtats]]
 * Belarusian: [[тхор лясны]], [[тхор чорны]]
@@ -53,7 +53,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Latin: {{t-|la|mustella}}
 * Latvian: [[sesks]]
 {{trans-mid}}
-* Lithuanian: {{t+|lt|šeškas|xs=Lithuanian}}
+* Lithuanian: {{t+|lt|šeškas}}
 * Lower Sorbian: [[twoŕ]]
 * Macedonian: [[обичен твор]] (običen tvor)
 * Navajo: {{tø|nv|tó wónaanídę́ę́ʼ dlǫ́ʼii}}
@@ -76,7 +76,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Turkish: {{t+|tr|kokarca}}
 * Ukrainian: [[тхiр лiсовий]] (txir lisovyj), [[тхiр чорний]] (txir čornyj)
 * Upper Sorbian: [[tchór]]
-* Walloon: {{t+|wa|vexhåd|xs=Walloon}}
+* Walloon: {{t+|wa|vexhåd}}
 * Welsh: [[ffwlbart]]
 * West Frisian: [[murd]]
 {{trans-bottom}}
@@ -86,7 +86,7 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 ====Synonyms====
 * [[fitch]]
 * [[foumart]]
-* [[skunk]] (''US, regional'')
+* [[skunk]] {{qualifier|US, regional}}
 
 ===Anagrams===
 * [[colpate#English|colpate]]
