/* Translations */ entire lang <polecat#18088088>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -30,12 +30,10 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Armenian: {{t-|hy|ժանտաքիս|tr=žantak'is}}
 * Basque: [[ipurtats]]
 * Belarusian: [[тхор лясны]], [[тхор чорны]]
-* Bosnian: {{t-|bs|tvor|m}}
 * Breton: [[pudask]]
 * Bulgarian: [[прът]] (prăt)
 * Catalan: [[turó]]
-* Croatian: {{t+|hr|tvor}}
-* Czech: {{t+|cs|tchoř|m}}
+** Czech: {{t+|cs|tchoř|m}}
 * Danish: {{t-|da|ilder}}
 * Dutch: {{t+|nl|bunzing|m}}
 * Esperanto: [[putoro]]
@@ -68,7 +66,9 @@ From {{etyl|frm}} {{term|pole||hen|lang=frm}} {{compound||cat}}. So named becaus
 * Sami: [[čáhppesbuoidda]]
 * Sardinian: [[pùtzola]]
 * Scottish Gaelic: [[feòcallan]]
-* Serbian: [[твор]] ([[-мрки]]) ([[tvor]] ([[-mrki]]))
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|твор|m|sc=Cyrl}}
+*: Latin {{t|sh|tvor|m|sc=Latn}}
 * Slovak: [[tchor obyčajný]]
 * Slovene: {{t+|sl|dihur|m}}
 * Spanish: {{t-|es|turón|m}}
