--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -373,7 +373,7 @@ British slang sense "police officer" from ''ante'' 1785.<ref>'''2003''', Victori
 Shortening of {{term|pigeon}}
 
 ====Pronunciation====
-{{rfp}}
+{{rfp|lang=en}}
 
 ====Noun====
 {{en-noun|?}}
