t+ie:[[glire]] t-balance ([[WT:EDIT|Assisted]]) <dormouse#18097047>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -38,13 +38,14 @@ From {{etyl|enm}} {{term|dormous|lang=enm}}, of uncertain origin. Possibly from 
 * Greek: [[δασομυωξός]] {{m}}
 * Hungarian: {{t+|hu|pele}}
 * Icelandic: {{t-|is|heslimús}}
+* Interlingue: {{t|ie|glire}}
 * Irish: {{t-|ga|luch chodlamáin|f}}, {{t-|ga|dallóg fhéir|f}}
 * Italian: {{t+|it|ghiro|m}}, {{t+|it|moscardino|m}}
 * Japanese: {{t-|ja|ヤマネ|tr=yamane}}
 * Ladin: [[ghiro]]
 * Latin: {{t-|la|glis|m}}
-* Latvian: [[susuris]]
 {{trans-mid}}
+* Latvian: [[susuris]]
 * Lithuanian: [[miegapelė]]
 * Lower Sorbian: [[połsk]]
 * Macedonian: [[полв]] (polv)
