--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -5,7 +5,7 @@
 From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþijanan|to bleed}}, from {{proto|Germanic|blōþan|blood}}.
 
 ===Pronunciation===
-* {{IPA|/ˈbliːd/}}
+* {{IPA|/ˈbliːd/}}, {{X-SAMPA|/"bli:d/}}
 * {{rhymes|iːd}}
 
 ===Verb===
@@ -37,6 +37,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþ
 * American Sign Language: {{tø|ase|4@Nose-PalmBackFingerAcross Wiggle 4@NearNeck-PalmBackFingerAcross|xs=American Sign Language}}
 * Arabic: {{t-|ar|نزف|tr=nazafa}}
 * Armenian: {{t-|hy|արյունահոսել|tr=aryunahosel}}
+* Asturian: {{t|ast|sangrar}}
 * {{trreq|eu}}
 * Bengali: {{t-|bn|রক্ত ঝরা|sc=Beng}}, {{t-|bn|রক্ত পড়া|sc=Beng}}
 * Bulgarian: {{t-|bg|тече кръв}}
@@ -50,6 +51,7 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþ
 * Faroese: {{t-|fo|bløða}}
 * Finnish: [[vuotaa]] [[veri|verta]]
 * French: {{t+|fr|saigner}}
+* Galician: {{t|gl|sangrar}}
 * Georgian: {{t-|ka|სისხლის დენა|tr=sisxlis dena|sc=Geor|xs=Georgian}}
 * German: {{t+|de|bluten}}
 * Greek: {{t+|el|αιμορραγώ||tr=aimorragó}}, {{t+|el|ματώνω||tr=matóno}}
@@ -60,15 +62,15 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþ
 * Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
 * Irish: {{t-|ga|cuir fuil|xs=Irish}}
 * Italian: {{t+|it|sanguinare}}
-* Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
+* Japanese: {{t|ja|出血|alt=出血する|tr=しゅっけつする, shukketsu suru}}, [[血]]を[[流す]] ([[ち]]を[[ながす]], chi o nagasu)
 {{trans-mid}}
-* Khmer: {{Khmr|[[ចេញឈាម]]}} (jeuñ chīəum)
+* Khmer: {{t|km|ចេញឈាម|tr=jeuñ chīəum}}
 * Korean: {{t-|ko|피를 흘리다|sc=Hang}}
 * Latin: {{t-|la|sanguinem mitto|alt=sanguinem mittō}},  {{t-|la|sanguino|alt=sanguinō}}
 * Latvian: {{t+|lv|asiņot|xs=Latvian}}
 * Lithuanian: {{t+|lt|kraujuoti|xs=Lithuanian}}
 * Mongolian: {{t-|mn|хуудас дүүрэн зураг|tr=huudas düüren zurag|sc=Cyrl|xs=Mongolian}}
-* Occitan: [[sagnar]]
+* Occitan: {{t|oc|sagnar}}
 * Old French: {{tø|fro|saingnier}}
 * Persian: {{t-|fa|حجامت کردن|xs=Persian}}
 * Polish: {{t-|pl|krwawić}}
@@ -82,8 +84,8 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþ
 * {{trreq|sw}}
 * Swedish: {{t+|sv|blöda}}
 * Tagalog: {{t-|tl|pagdugo|xs=Tagalog}}
-* Thai: {{Thai|[[ตกเลือด]]}} (dtòk lêuat)
-* Turkish: [[kanamak]] [-ar]
+* Thai: {{t|th|ตกเลือด|tr=dtòk lêuat}}
+* Turkish: {{t|tr|kanamak}} [-ar]
 * {{trreq|vi}}
 * Volapük: {{t+|vo|bludön}}
 * Welsh: {{t+|cy|gwaedu|xs=Welsh}}
@@ -91,11 +93,11 @@ From {{etyl|ang}} {{term|bledan|blēdan|lang=ang}}, from {{proto|Germanic|blōþ
 {{trans-bottom}}
 
 {{trans-top|draw blood}}
-* Bulgarian: {{t-|bg|проливам кръв}},  {{t-|bg|пускам кръв}}
+* Bulgarian: {{t-|bg|проливам кръв}}, {{t-|bg|пускам кръв}}
 * Catalan: {{t+|ca|sagnar}}
 * Irish: {{t-|ga|fuiligh|xs=Irish}}
 {{trans-mid}}
-* Latin: {{t-|la|depleo|alt=dēpleō}},  {{t-|la|phlebotomo|alt=phlebotomō}}
+* Latin: {{t-|la|depleo|alt=dēpleō}}, {{t-|la|phlebotomo|alt=phlebotomō}}
 * Portuguese: {{t+|pt|sangrar}}
 * Tagalog: {{t-|tl|duguan|xs=Tagalog}}
 {{trans-bottom}}
